[gd_scene load_steps=5 format=3 uid="uid://b6tab545mqcio"]

[ext_resource type="Script" uid="uid://c1qx4vvx4o177" path="res://scripts/TerritoryMap.gd" id="1_oa2dx"]

[sub_resource type="Environment" id="Environment_88rvf"]
background_mode = 1
background_color = Color(0.0392157, 0.0392157, 0.0784314, 1)
ambient_light_source = 2
ambient_light_color = Color(0.34902, 0.34902, 0.34902, 1)
glow_enabled = true
glow_levels/1 = 1.0
glow_levels/2 = 1.0
glow_levels/4 = 1.0
glow_levels/6 = 1.0
glow_levels/7 = 1.0
glow_intensity = 0.2
glow_blend_mode = 1
glow_hdr_threshold = 1.1
glow_hdr_scale = 1.0
adjustment_enabled = true
adjustment_brightness = 1.05
adjustment_contrast = 1.1
adjustment_saturation = 1.1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kmdge"]
transparency = 1
albedo_color = Color(0, 0.639216, 0.909804, 0.501961)
emission_enabled = true
emission = Color(0, 0.639216, 0.909804, 1)
emission_energy_multiplier = 0.2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ltb8q"]
bg_color = Color(0.0784314, 0.0784314, 0.0941176, 0.941176)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0.639216, 0.909804, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="TerritoryMap" type="Node3D"]
script = ExtResource("1_oa2dx")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_88rvf")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.353553, 0.353553, 0, 0.707107, 0.707107, -0.5, -0.612372, 0.612372, 0, 10, 0)
light_color = Color(0.933333, 0.913725, 0.843137, 1)
shadow_enabled = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.642788, 0.766044, 0, -0.766044, 0.642788, 8, 8, 12)
fov = 50.0

[node name="TileContainer" type="Node3D" parent="."]

[node name="Highlight" type="CSGCylinder3D" parent="."]
visible = false
radius = 1.1
height = 0.1
sides = 6
material = SubResource("StandardMaterial3D_kmdge")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HeaderPanel" type="Panel" parent="CanvasLayer"]
custom_minimum_size = Vector2(0, 60)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ltb8q")

[node name="Label" type="Label" parent="CanvasLayer/HeaderPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0.639216, 0.909804, 1)
theme_override_font_sizes/font_size = 24
text = "TERRITORY CONTROL MAP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InfoPanel" type="Panel" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -200.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_ltb8q")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/InfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="CanvasLayer/InfoPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 36.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0.639216, 0.909804, 1)
theme_override_font_sizes/font_size = 18
text = "Sector X-Y"

[node name="TypeLabel" type="Label" parent="CanvasLayer/InfoPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 10.0
offset_top = 40.0
offset_right = -10.0
offset_bottom = 66.0
grow_horizontal = 2
text = "Type: Data Node"

[node name="StrengthLabel" type="Label" parent="CanvasLayer/InfoPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 10.0
offset_top = 60.0
offset_right = -10.0
offset_bottom = 86.0
grow_horizontal = 2
text = "Strength: 3"

[node name="ResourcesLabel" type="Label" parent="CanvasLayer/InfoPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 10.0
offset_top = 80.0
offset_right = -10.0
offset_bottom = 106.0
grow_horizontal = 2
text = "Resources: 2"

[node name="OwnerLabel" type="Label" parent="CanvasLayer/InfoPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 10.0
offset_top = 100.0
offset_right = -10.0
offset_bottom = 126.0
grow_horizontal = 2
text = "Status: Unclaimed"

[node name="ContestedLabel" type="Label" parent="CanvasLayer/InfoPanel"]
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 10.0
offset_top = 120.0
offset_right = -10.0
offset_bottom = 146.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.341176, 0.133333, 1)
text = "This territory is contested!"

[node name="ClaimButton" type="Button" parent="CanvasLayer/InfoPanel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -40.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
text = "CLAIM TERRITORY"

[node name="BackButton" type="Button" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -60.0
offset_right = 120.0
offset_bottom = -20.0
grow_vertical = 0
text = "BACK"
